--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
 <!doctype html>
 <html>
-  <head>
-      <meta charset="utf-8">
-      <meta name="description" content="">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <title>Aravind MJ - Intro</title>
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-      <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900" rel="stylesheet">
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
-      <link rel="stylesheet" href="scribbler-global.css">
-      <link rel="stylesheet" href="scribbler-landing.css">
-      <link rel="author" href="humans.txt">
-  </head>
-  <body>
-    <nav>
-      <div class="logo"></div>
-      <ul class="menu">
-        <div class="menu__item toggle"><span></span></div>
-        <li class="menu__item"><a href="https://github.com/aravindmj97" class="link link--dark"><i class="fa fa-github"></i> Github</a></li>
-      </ul>
-    </nav>
-    <div class="hero">
-      <h1 class="hero__title">I'm Aravind MJ</h1>
-      <p class="hero__description">Scholar@SAP</p>
-    </div>
-    <div class="hero__terminal">
-      <pre>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Aravind MJ - Intro</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/styles/railscasts.min.css">
+  <link rel="stylesheet" href="scribbler-global.css">
+  <link rel="stylesheet" href="scribbler-landing.css">
+  <link rel="author" href="humans.txt">
+</head>
+
+<body>
+  <nav>
+    <div class="logo"></div>
+    <ul class="menu">
+      <div class="menu__item toggle"><span></span></div>
+      <li class="menu__item"><a href="https://github.com/aravindmj97" class="link link--dark"><i
+            class="fa fa-github"></i> Github</a></li>
+    </ul>
+  </nav>
+  <div class="hero">
+    <h1 class="hero__title">I'm Aravind MJ</h1>
+    <p class="hero__description">Scholar@SAP</p>
+  </div>
+  <div class="hero__terminal">
+    <pre>
         <code class="shell-session aboutme">hello ~ $ </code>
       </pre>
-    </div>
-    <!-- <div class="wrapper">
+  </div>
+  <!-- <div class="wrapper">
       <div class="installation">
         <h3 class="section__title">Live Projects</h3>
         <div class="feature">
@@ -45,9 +48,34 @@
         </div>
       </div>
     </div> -->
-    <!-- <footer class="footer"></footer> -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    <script src="scribbler.js"></script>
-  </body>
+  <div class="wrapper" style="margin-bottom: 50px;">
+    <div class="feature">
+      <div class="feature__item">
+        <h3 class="section__title">Scriptor</h3>
+        <p>A Minimalistic Notepad in Android <a href="https://play.google.com/store/apps/details?id=com.A_4dotsinc.scriptor&hl=en_US" target="_blank"><img height="40px" src="https://cdn2.iconfinder.com/data/icons/social-media-8/512/playstore.png"/></a></p>
+      </div>
+      <div class="feature__item">
+        <h3 class="section__title">COVID-19 STATS</h3>
+        <p>A Dashboard to shoowcase COVID-19 status based on publically available data <br /> <a href="http://mesignite.com/">COVID-19 STATS</a></p>
+      </div>
+      <div class="feature__item">
+        <h3 class="section__title">Clipper</h3>
+        <p>Clipper monitors 🔍 the clipboard of the phone and saves the texts to cloud ☁ which can then be accessed via Clipper App 📱 or Website 💻 </p>
+      </div>
+      <div class="feature__item">
+        <h3 class="section__title">TicTacToe (InProgress)</h3>
+        <p>An online multiplayer version of the original TicTacToe game 🎮</p>
+      </div>
+      <div class="feature__item">
+        <h3 class="section__title">Quizly (InProgress)</h3>
+        <p>A platform for creating, sharing and playing quiz (Flutter)</p>
+      </div>
+    </div>
+  </div>
+  <!-- <footer class="footer"></footer> -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
+  <script>hljs.initHighlightingOnLoad();</script>
+  <script src="scribbler.js"></script>
+</body>
+
 </html>
