Added projects title

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
       </div>
     </div> -->
   <div class="wrapper" style="margin-bottom: 50px;">
+    <h3 class="section__title">Projects</h3>
     <div class="feature">
       <div class="feature__item">
         <h3 class="section__title">Scriptor</h3>
