Added link to covid19

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
       <div class="feature__item">
         <h3 class="section__title">COVID-19 STATS</h3>
-        <p>A Dashboard to shoowcase COVID-19 status based on publically available data <br /> <a href="http://mesignite.com/">COVID-19 STATS</a></p>
+        <p>A Dashboard to shoowcase COVID-19 status based on publically available data <br /> <a href="http://mesignite.com/">Link - COVID-19 STATS</a></p>
       </div>
       <div class="feature__item">
         <h3 class="section__title">Clipper</h3>
