Pending changes exported from your codespace

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   </nav>
   <div class="hero">
     <h1 class="hero__title">I'm Aravind MJ</h1>
-    <p class="hero__description">Scholar@SAP 2019</p>
+    <p class="hero__description">Developer - SAP Labs India</p>
   </div>
   <div class="hero__terminal">
     <pre>
