--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
       <div class="menu__item toggle"><span></span></div>
       <li class="menu__item"><a href="https://github.com/aravindmj97" class="link link--dark"><i
             class="fa fa-github"></i> Github</a></li>
+      <li class="menu__item"><a href="https://www.instagram.com/_aravind_mj/" class="link link--dark">
+        <i class="fa-brands fa-instagram"></i> Instagram</a></li>
+      <li class="menu__item"><a href="./ARAVIND_MJ_Resume.pdf" class="link link--dark">
+        <i class="fa-regular fa-file"></i> Resume</a></li>      
     </ul>
   </nav>
   <div class="hero">
