--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
       <li class="menu__item"><a href="https://github.com/aravindmj97" class="link link--dark"><i
             class="fa fa-github"></i> Github</a></li>
       <li class="menu__item"><a href="https://www.instagram.com/_aravind_mj/" class="link link--dark">
-        <i class="fa-brands fa-instagram"></i> Instagram</a></li>
+        <i class="fa fa-instagram" aria-hidden="true"></i> Instagram</a></li>
       <li class="menu__item"><a href="./ARAVIND_MJ_Resume.pdf" class="link link--dark">
-        <i class="fa-regular fa-file"></i> Resume</a></li>      
+        <i class="fa fa-file" aria-hidden="true"></i> Resume</a></li>      
     </ul>
   </nav>
   <div class="hero">
